Fix color contrast by changing background from bisque to black for accessibility

--- a/live-examples/html-examples/interactive-elements/css/menu.css
+++ b/live-examples/html-examples/interactive-elements/css/menu.css
@@ -1,5 +1,5 @@
 .news {
-  background-color: bisque;
+  background-color: black;
   padding: 1em;
   border: solid thin black;
 }
